--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en-US" class=" webkit chrome win js js csstransforms csstransforms3d csstransitions js no-touch"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style id="fit-vids-style">.fluid-width-video-wrapper{width:100%;position:relative;padding:0;}.fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position:absolute;top:0;left:0;width:100%;height:100%;}</style></head><body class="home page page-id-7 page-template page-template-page-templates page-template-one-page page-template-page-templatesone-page-php dslc-page dslc-page-has-content windows dslc-res-big" id="page-top" data-spy="scroll" data-target=".navbar-custom" style="overflow: visible;">﻿	
 
-    <title>琳琳，我喜欢您~</title>
+    <title>琳琳，我喜欢你~</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" id="contact-form-7-css" href="./css/styles.css" type="text/css" media="all">
     <link rel="stylesheet" id="dslc-main-css-css" href="./css/main.min.css" type="text/css" media="all">
@@ -28,7 +28,7 @@
 
                   <div id="dslc-module-1" class="dslc-module-front dslc-module-Pluton_Title dslc-in-viewport-check dslc-in-viewport-anim-none   dslc-module-handle-like-regular dslc-in-viewport" data-module-id="1" data-dslc-module-id="Pluton_Title" data-dslc-module-size="12" data-dslc-anim="none" data-dslc-anim-delay="0" data-dslc-anim-duration="650" data-dslc-anim-easing="ease" data-dslc-preset="" style="animation: forwards 0.65s ease none;">
                     <div class="heading" id="#wmaq">
-                      <h2 class="wow fadeInUp underline padtop50 animated" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">琳~琳~，我~喜~欢~你~</h2>
+                      <h2 class="wow fadeInUp underline padtop50 animated" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">琳琳~，我喜欢你~</h2>
                       <p class="wow fadeInUp animated" data-wow-delay="0.7s" style="color: rgb(239, 106, 138); visibility: visible; animation-delay: 0.7s; animation-name: fadeInUp;">♥ 2019-08-07 ♥</p></div>
               
 
