--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                           </li>
                         </ul>
                       </div>
-                      <div class="and">&amp;&nbsp;</div>
+                      <div class="and">♥</div>
                       <div class="col-md-6">
                         <ul class="ch-grid woman wow flipInX animated" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: flipInX;">
                           <li>
