--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                   <div id="dslc-module-1" class="dslc-module-front dslc-module-Pluton_Title dslc-in-viewport-check dslc-in-viewport-anim-none   dslc-module-handle-like-regular dslc-in-viewport" data-module-id="1" data-dslc-module-id="Pluton_Title" data-dslc-module-size="12" data-dslc-anim="none" data-dslc-anim-delay="0" data-dslc-anim-duration="650" data-dslc-anim-easing="ease" data-dslc-preset="" style="animation: forwards 0.65s ease none;">
                     <div class="heading" id="#wmaq">
-                      <h2 class="wow fadeInUp underline padtop50 animated" id="words" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">琳琳~，我喜欢你~</h2>
+                      <h2 class="wow fadeInUp underline padtop50 animated" id="words" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">琳琳~，我喜欢你~ 比地球上任何人都喜欢~</h2>
                       <p class="wow fadeInUp animated" data-wow-delay="0.7s" style="color: rgb(239, 106, 138); visibility: visible; animation-delay: 0.7s; animation-name: fadeInUp;">♥ 2019-08-07 ♥</p></div>
               
 
