--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <script type="text/javascript">
 try{
     if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
+        document.getElementById("words").style.fontSize=16;
         document.getElementById("words").style.fontFamily='宋体';
     }else{
         document.getElementById("words").style.fontFamily='Great Vibes';
